--- a/assets/templates/auth/index.html
+++ b/assets/templates/auth/index.html
@@ -56,10 +56,10 @@
       </div>
     </div>
 
-    <div class="login-info" id="login-info">
+    <!--<div class="login-info" id="login-info">
       <img src="/images/auth/logo.png" alt="">
       <p id="typewriter">全面保护企业网络安全<br>APT2.0时代最智能的工业防火墙</p>
-    </div>
+    </div>-->
 
     <!-- DOWNLOAD Chrome -->
     <div class="col-xs-12 text-center" ng-if="auth.isIE">
